--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -87,4 +87,5 @@
     <string name="heatmap">热力图</string>
     <string name="no_target_toast">无可选目标</string>
     <string name="relaxing">休息中</string>
+    <string name="take_break_hint">专注结束了，休息一会儿吧。</string>
 </resources>
