--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -88,4 +88,6 @@
     <string name="no_target_toast">无可选目标</string>
     <string name="relaxing">休息中</string>
     <string name="take_break_hint">专注结束了，休息一会儿吧。</string>
+    <string name="work_finish_hint">刚刚完成了一个时间片</string>
+    <string name="break_finish_hint">休息结束了</string>
 </resources>
