--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -138,6 +138,8 @@
     <string name="no_target_toast">No available target</string>
     <string name="take_break_hint">Focus finished, just take a break.</string>
     <string name="zero_time" translatable="false">00:00</string>
+    <string name="work_finish_hint">Just finish a time piece!</string>
+    <string name="break_finish_hint">The break is over</string>
 
 
 </resources>
