--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -89,5 +89,5 @@
     <string name="relaxing">休息中</string>
     <string name="take_break_hint">专注结束了，休息一会儿吧。</string>
     <string name="work_finish_hint">刚刚完成了一个时间片</string>
-    <string name="break_finish_hint">休息结束了</string>
+    <string name="break_finish_hint">准备开始专注</string>
 </resources>
