--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <string name="title_home">Home</string>
+    <string name="title_timer">Timer</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_setting">Setting</string>
 
