--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -96,6 +96,7 @@
     <!-- Place Holder -->
     <string name="default_target" translatable="false">Timing</string>
     <string name="default_time" translatable="false">00:00</string>
+    <string name="default_date" translatable="false">01-01</string>
     <string name="default_time_number" translatable="false">00</string>
     <string name="default_number" translatable="false">0</string>
 
