fix: small fixes
Signed-off-by: Zxilly <zhouxinyu1001@gmail.com>

--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -91,4 +91,5 @@
     <string name="work_finish_hint">刚刚完成了一个时间片</string>
     <string name="break_finish_hint">准备开始专注</string>
     <string name="work_start">开始专注</string>
+    <string name="msg_login_first">请先登录。</string>
 </resources>
