--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -142,6 +142,7 @@
     <string name="zero_time" translatable="false">00:00</string>
     <string name="work_finish_hint">Just finish a time piece!</string>
     <string name="break_finish_hint">Ready to start focusing</string>
+    <string name="msg_login_first">You should login before do this.</string>
 
 
 </resources>
